# olgram

./: .gitignore  Dockerfile  Makefile  debug.env  docker-compose-debug.yaml  docker-compose-full.yaml  docker-compose-src.yaml  docker-entrypoint.sh  example.env  main.py  pyproject.toml  readme-dev.md
.cursor/rules/: formatting-python.mdc  use-uv.mdc
locales/: locale.py
locales/en/LC_MESSAGES/: olgram.po
locales/uk/LC_MESSAGES/: olgram.po
locales/zh/LC_MESSAGES/: olgram.po
olgram/: redis_client.py  router.py  settings.py
olgram/captcha/: __init__.py  base.py  disabled_captcha.py  math_captcha.py
olgram/commands/: admin.py  bot_actions.py  bots.py  info.py  menu.py  promo.py  start.py
olgram/migrations/: custom.py
olgram/migrations/models/: 0_20260110235705_init.py  1_20260307234938_add_captcha_fields.py
olgram/models/: models.py
olgram/utils/: crypto.py  i18n.py  mix.py  permissions.py
server/: custom.py  inlines.py  server.py
