[tool.poetry]
name = "olgram"
version = "0.2.1"
description = ""
authors = ["Civ Soc <feedback@civsoc.it>"]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^2.14.3"
python-dotenv = "^0.19.2"
aiocache = "^0.11.1"
aiohttp = "^3.10"
pycrypto = "^2.6.1"
aioredis = "1.3"
aerich = "0.9.x"
tortoise-orm = {version = "0.25.x", extras = ["asyncpg"]}
python-gettext = "^5.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.aerich]
tortoise_orm = "olgram.settings.TORTOISE_ORM"
location = "./olgram/migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
