[project]
name = "olgram"
version = "0.2.1"
description = ""
authors = [{ name = "Civ Soc", email = "feedback@civsoc.it" }]
requires-python = ">=3.12,<4"
license = "CC0-1.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiogram>=2.14.3,<3",
    "python-dotenv>=0.19.2,<0.20",
    "aiocache>=0.11.1,<0.12",
    "aiohttp>=3.10,<4",
    "pycryptodome>=3.19.0,<4",
    "redis[asyncio]>=5.0.0,<6",
    "aerich==0.9.2",
    "tortoise-orm[asyncpg]~=0.25.0",
    "python-gettext>=5.0,<6",
]

[dependency-groups]
dev = ["flake8>=4.0.1,<5", "ruff>=0.8.0"]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.aerich]
tortoise_orm = "olgram.settings.TORTOISE_ORM"
location = "./olgram/migrations"
app = "models"

[tool.ruff]
line-length = 140
target-version = "py312"
exclude = [".git", "__pycache__", "venv", ".venv", "olgram/migrations"]

[tool.ruff.format]
# Висячий отступ для аргументов (не выравнивание по скобке)
indent-style = "space"
# Один аргумент на строку при переносе — поведение по умолчанию у Ruff/Black
quote-style = "double"
# Не ставить запятую после последнего аргумента, если вызов в одну строку
skip-magic-trailing-comma = false
